-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 16
-
Component/s: hotspot
-
b27
* Symptom
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGFPE (0x8) at pc=0x00007f1acdb1dc40, pid=44226, tid=44227
#
# JRE version: (16.0+4) (fastdebug build )
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+4-adhoc.jvm.jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb91c40] G1ConcurrentRefine::create(int*)+0x40
#
Stack: [0x00007f1acfce1000,0x00007f1acfde2000], sp=0x00007f1acfde0a20, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xb91c40] G1ConcurrentRefine::create(int*)+0x40
V [libjvm.so+0xb5fcc6] G1CollectedHeap::initialize()+0x636
V [libjvm.so+0x1856e6d] universe_init()+0x9d
V [libjvm.so+0xd43066] init_globals()+0x36
V [libjvm.so+0x180f364] Threads::create_vm(JavaVMInitArgs*, bool*)+0x2a4
V [libjvm.so+0xecd309] JNI_CreateJavaVM+0x99
C [libjli.so+0x75ba] JavaMain+0x8a
C [libjli.so+0xae99] ThreadJavaMain+0x9
```
* Reproduce
```
java -XX:G1ConcRefinementThresholdStep=16G -XX:G1UpdateBufferSize=1G -version
```
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGFPE (0x8) at pc=0x00007f1acdb1dc40, pid=44226, tid=44227
#
# JRE version: (16.0+4) (fastdebug build )
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+4-adhoc.jvm.jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb91c40] G1ConcurrentRefine::create(int*)+0x40
#
Stack: [0x00007f1acfce1000,0x00007f1acfde2000], sp=0x00007f1acfde0a20, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xb91c40] G1ConcurrentRefine::create(int*)+0x40
V [libjvm.so+0xb5fcc6] G1CollectedHeap::initialize()+0x636
V [libjvm.so+0x1856e6d] universe_init()+0x9d
V [libjvm.so+0xd43066] init_globals()+0x36
V [libjvm.so+0x180f364] Threads::create_vm(JavaVMInitArgs*, bool*)+0x2a4
V [libjvm.so+0xecd309] JNI_CreateJavaVM+0x99
C [libjli.so+0x75ba] JavaMain+0x8a
C [libjli.so+0xae99] ThreadJavaMain+0x9
```
* Reproduce
```
java -XX:G1ConcRefinementThresholdStep=16G -XX:G1UpdateBufferSize=1G -version
```
- duplicates
-
JDK-8254017 JVM crash with -XX:G1ConcRefinementThresholdStep=16M
-
- Closed
-