8257228: G1: SIGFPE in G1ConcurrentRefine::create(int*) due to buffers_to_cards overflow